--- a/package.json
+++ b/package.json
@@ -26,15 +26,17 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
+    "axios": "~0.15.3",
     "babel-preset-stage-1": "^6.1.18",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-infinite-scroll-component": "^2.4.0",
+    "react-infinite-scroller": "^1.0.13",
     "react-redux": "^4.0.0",
     "react-router": "~2.0.0-rc5",
     "redux": "^3.0.4",
-    "redux-promise": "~0.5.3",
-    "axios": "~0.15.3",
-    "redux-form": "~4.1.3"
+    "redux-form": "~4.1.3",
+    "redux-promise": "~0.5.3"
   }
 }
